force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/HTTPCalloutFrameworkConfig__mdt.object-meta.xml
<CustomObject>
    <label>HTTPCalloutFrameworkConfig</label>
    <pluralLabel>HTTPCalloutFrameworkConfig</pluralLabel>
</CustomObject>