force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Cache_Retention_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Cache_Retention_in_Seconds__c</fullName>
    <label>Cache Retention in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>