force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <inlineHelpText>Required if Named Credentials are not used; Recommendation is to use Named Credentials as User Name and Passwords will be exposed here.</inlineHelpText>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>