force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <inlineHelpText>Required if Named Credentials are not used; Recommendation is to use Named Credentials as User Name and Passwords will be exposed here.</inlineHelpText>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>