force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Enable_Caching__c.field-meta.xml
<CustomField>
    <fullName>Enable_Caching__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the request is same across application, then response will be pulled from cache instead of making the actual callout</inlineHelpText>
    <label>Enable Caching</label>
    <type>Checkbox</type>
</CustomField>