force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Mock_Response_Class__c.field-meta.xml
<CustomField>
    <fullName>Mock_Response_Class__c</fullName>
    <inlineHelpText>If Mock Class mentioned, http call will not be made. Ensure the mock call implements HTTPCalloutStub</inlineHelpText>
    <label>Mock Response Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>