force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Org_or_Session_Partition__c.field-meta.xml
<CustomField>
    <fullName>Org_or_Session_Partition__c</fullName>
    <defaultValue>&quot;Org&quot;</defaultValue>
    <inlineHelpText>Select if this Cache is in Org or SessionPartition</inlineHelpText>
    <label>Org or Session Partition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Org</fullName>
                <default>true</default>
                <label>Org</label>
            </value>
            <value>
                <fullName>Session</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>