force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Platform_Cache_Partition_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Cache_Partition_Name__c</fullName>
    <inlineHelpText>Name of the Cache Partition</inlineHelpText>
    <label>Platform Cache Partition Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>