force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <inlineHelpText>If User Name &amp; Password are not given, enter Refresh_Token when not using Named Credentials. Recommendation is to use Named Credentials.</inlineHelpText>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>