force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Static_Headers__c.field-meta.xml
<CustomField>
    <fullName>Static_Headers__c</fullName>
    <description>Multiline, separated by : and  For e.g.
Content-Type:application/x-www-form-urlencoded
X-Resource:GetPDIRating</description>
    <inlineHelpText>Multiline, separated by : and  For e.g.
Content-Type:application/x-www-form-urlencoded
X-Resource:GetPDIRating</inlineHelpText>
    <label>Static Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>