force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Supported_Environments__c.field-meta.xml
<CustomField>
    <fullName>Supported_Environments__c</fullName>
    <label>Supported Environments</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>