force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/fields/Time_Out_in_milliseconds__c.field-meta.xml
<CustomField>
    <fullName>Time_Out_in_milliseconds__c</fullName>
    <label>Time Out (in milliseconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>