force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/validationRules/Validate_Comma_Separated.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Comma_Separated</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Supported_Environments__c, &quot;^[a-z0-9]+(,[a-z0-9]+)*$&quot;))</errorConditionFormula>
    <errorDisplayField>Supported_Environments__c</errorDisplayField>
    <errorMessage>Ensure comma separated lower case alphanumeric values. No spaces allowed. No need for comma at the end.</errorMessage>
</ValidationRule>