force-app/main/default/objects/HTTPCalloutFrameworkConfig__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>HTTP_Method__c</columns>
    <columns>Supported_Environments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>